[package]
name = "boca"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
clap = { version = "4.5.20", features = ["derive"] }
markdown = { version = "1.0.0-alpha.21", features = ["log"] }
minijinja = "2.3.1"
notify = "6.1.1"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.16"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
